# racers

./: .editorconfig  CLAUDE.md  CMakeLists.txt
.github/workflows/: build.yml  pr-comment.yml
GolDP/: library_msvc.h
GolDP/include/: amberlens0x344.h  amberlensbase0x120.h  boundingvolume0x64.h  cinderbasin0x28.h  color.h  duskwindbananarelic0x24.h  floatybarge0x4c.h  floatyboat0x28.h  floatybuoy0x58.h  floatykajak0x64.h  floatypontoon0x4c.h  fluffygloomkins0x118.h  gdbcommonvertexarray0x1c.h  gdbmodel0x48.h  gdbvertexarray0xc.h  gol.h  goldpexport.h  golfont0xa0.h  golfontbase0x40.h  golfonttable.h  igdbmodel0x40.h  jadeorbit0xd0.h  jadeorbitbase0x10.h  shadowwolf0xc.h  utopianpan0xa4.h  whitebaffoon0x50.h  whitefalconnode0x18.h  zoweeblubberworth0xf0.h
GolDP/include/bounds/: golboundingshape.h
GolDP/include/camera/: golcamerabase.h
GolDP/include/font/: golfont.h
GolDP/include/material/: duskwindbananarelic0x30.h  golmateriallibrary.h  goltexturelist.h
GolDP/include/mesh/: gdbcommonvertexarray0x1c.h  golmodel.h
GolDP/include/render/: gold3drenderdevice.h  golrasterizers1.h  golrasterizers2.h  golrenderdevice.h  golsoftwarerenderer.h
GolDP/include/scene/: golbillboard.h  golbillboardex.h  golcollidableentity.h  golskinnedentity.h
GolDP/include/surface/: purpledune0x7c.h
GolDP/include/world/: golworlddatabase.h
GolDP/src/: amberhaze0x1c.cpp  amberlens0x344.cpp  amberlensbase0x120.cpp  boundingvolume0x64.cpp  bronzefalcon0xc8770.cpp  cinderbasin0x28.cpp  duskwindbananarelic0x30.cpp  floatybarge0x4c.cpp  floatyboat0x28.cpp  floatybuoy0x58.cpp  floatykajak0x64.cpp  floatypontoon0x4c.cpp  fluffygloomkins0x118.cpp  gdbcommonvertexarray0x1c.cpp  gdbmodel0x48.cpp  gdbvertexarray0xc.cpp  goldpexport.cpp  golfont0xa0.cpp  golfontbase0x40.cpp  golfonttable.cpp  igdbmodel0x40.cpp  jadeorbit0xd0.cpp  jadeorbitbase0x10.cpp  purpledune0x7c.cpp  shadowwolf0xc.cpp  utopianpan0xa4.cpp  whitebaffoon0x50.cpp  whitefalconnode0x18.cpp  zoweeblubberworth0xf0.cpp
GolDP/src/bounds/: golboundingshape.cpp
GolDP/src/camera/: golcamerabase.cpp
GolDP/src/core/: goldpexport.cpp
GolDP/src/font/: golfont.cpp  golfontlibrary.cpp
GolDP/src/material/: duskwindbananarelic0x30.cpp  golmateriallibrary.cpp
GolDP/src/mesh/: gdbvertexarraymistery0x1c.cpp  gdbvertexarraytypeone0x1c.cpp  gdbvertexarraytypethree0x20.cpp  gdbvertexarraytypetwo0x20.cpp  golmodel.cpp
GolDP/src/render/: gold3drenderdevice.cpp  golrasterizers1.cpp  golrasterizers2.cpp  golrenderdevice.cpp  golsoftwarerenderer.cpp
GolDP/src/scene/: golbillboard.cpp  golbillboardex.cpp
GolDP/src/surface/: bronzedune0x4c.cpp
GolDP/src/world/: golworlddatabase.cpp  golworlddatabaseex.cpp
LEGORacers/: library_msvc.h
LEGORacers/include/: ambermeadow0x58.h  aquamarinespirit0x3c.h  ceruleanemperor0x4c.h  ceruleanknight0x20.h  championdefinitionlist.h  coppercrest0x40.h  crimsonpebble0x228.h  crimsonsun0xa4.h  imaginarybolt0x4774.h  imaginarychisel0x658.h  imaginarycube0x3c34.h  imaginarydrillfieldat0x22dc.h  imaginarydrillfieldat0x420.h  imaginarydrillfieldat0x498.h  imaginaryinterface.h  imaginarynotion0x290.h  imaginaryring0x3360.h  imaginaryruler0x2e60.h  imaginaryshape0x2b20.h  imaginaryspool0x2cc4.h  imaginarytool0x368.h  imaginarywrench0x23bc.h  lavendervault0x764.h  legoracers.h  lilacorbit0x28.h  obscureanthem0x58.h  obscurecarousel0x78.h  obscureicon0x1a8.h  obscurelink0x1c.h  obscuresigil0xdc.h  obscurevantage0x58.h  opalhaven0xf4.h  particle0x18c.h  peridottrace0x4e0.h  peridottraceroot0x108.h  porcelainveil0x50.h  racedefinitionlist.h  racenameentry.h  scarletnova0x5c.h  silverhollow0xb8.h  (+1 more)
LEGORacers/include/app/: legoracers.h
LEGORacers/include/race/: racestate.h  (+15 more)
LEGORacers/src/: aquamarinespirit0x3c.cpp  ceruleanemperor0x4c.cpp  ceruleanknight0x20.cpp  citrinegrove0x1f4c.cpp  coppercrest0x40.cpp  crimsonpebble0x228.cpp  crimsonsun0xa4.cpp  crimsonsun0xa4entry.cpp  imaginarybolt0x4774.cpp  imaginarychisel0x658.cpp  imaginarycube0x3c34.cpp  imaginarydrillfieldat0x22dc.cpp  imaginarydrillfieldat0x420.cpp  imaginarydrillfieldat0x498.cpp  imaginarynotion0x290.cpp  imaginaryring0x3360.cpp  imaginaryruler0x2e60.cpp  imaginaryshape0x2b20.cpp  imaginaryspool0x2cc4.cpp  imaginarytool0x368.cpp  imaginarywrench0x23bc.cpp  lavendervault0x764.cpp  lilacorbit0x28.cpp  menumanager.cpp  obscureanthem0x58.cpp  obscurecarousel0x78.cpp  obscureicon0x1a8.cpp  obscurelink0x1c.cpp  obscuresigil0xdc.cpp  obscurevantage0x58.cpp  onyxbreeze0x248.cpp  opalhaven0xf4.cpp  particle0x18c.cpp  peridottrace0x4a8.cpp  peridottrace0x4e0.cpp  peridottraceroot0x108.cpp  peridottracerootentrybase0x8.cpp  peridottracestate0x438.cpp  porcelainveil0x50.cpp  racedefinitionlist.cpp  (+5 more)
common/include/: cmbmodelpart0x34.h  cmbmodelpartdata0x18.h  cmbmodelpartdata0x28.h  duskwindbananarelic0x24.h  gdbmodelindexarray0xc.h  gdbvertexarray0xc.h  golbmpfile.h  golbmpwriterfile.h  golboundedentity.h  golboundingshape.h  golboundingvolume.h  golcollidableentity.h  golconstants.h  golfile.h  golfileparser.h  golfontbase.h  golimgfile.h  golimgfilewriter.h  golmath.h  golmodelbase.h  golmodelentity.h  golmodelmaterialtable.h  golname.h  golnametable.h  golorientedentity.h  golscenenode.h  golstring.h  goltgafile.h  goltxtparser.h  golviewfrustum.h  golworldentity.h  igdbmodelindexarray0x8.h
common/src/: cmbmodelpart0x34.cpp  cmbmodelpartdata0x18.cpp  duskwindbananarelic0x24.cpp  gdbmodelindexarray0xc.cpp  gdbvertexarray0xc.cpp  golanimatedentity.cpp  golbmpfile.cpp  golbmpwriterfile.cpp  golboundedentity.cpp  golboundingshape.cpp  golboundingvolume.cpp  golcamerabase.cpp  golcollidableentity.cpp  golconstants.cpp  golfile.cpp  golfileparser.cpp  golfontbase.cpp  golimgfile.cpp  golimgfilewriter.cpp  golmath.cpp  golmodelbase.cpp  golmodelentity.cpp  golmodelmaterialtable.cpp  golorientedentity.cpp  golscenenode.cpp  golstream.cpp  golsurfaceformat.cpp  goltgafile.cpp  golviewfrustum.cpp  igdbmodelindexarray0x8.cpp  mabmaterialanimation0x14.cpp  mabmaterialanimationitem0x8.cpp  materialtable0x0c.cpp
reccmp/: lego-racers-floats.csv  lego-racers-function-size.csv
(+181 files in other folders)
